--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EshopAppCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EshopDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
