Jwt token service, Authentication/Authorization

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  
+  "Jwt": {
+    "Key": "C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeS",
+    "Issuer": "https://localhost:44389/",
+    "Audience": "https://localhost:44389/"
+  },
   "AllowedHosts": "*"
 }
